demystify-lib/src/problem/snapshots/demystify_lib__problem__solver__tests__parse_essence-3.snap
---
source: demystify-lib/src/problem/solver.rs
expression: puz.get_provable_varlits().clone()
---
{
    ~x5,
    x7,
    x8,
    ~x9,
    ~x10,
    ~x12,
    x13,
    x14,
    ~x15,
    ~x17,
    ~x18,
    ~x19,
}
