demystify-lib/src/problem/snapshots/demystify_lib__problem__solver__tests__parse_essence-4.snap
---
source: demystify-lib/src/problem/solver.rs
expression: puz.get_literals_to_try_solving()
---
{
    x5,
    ~x5,
    x7,
    ~x7,
    x8,
    ~x8,
    x9,
    ~x9,
    x10,
    ~x10,
    x12,
    ~x12,
    x13,
    ~x13,
    x14,
    ~x14,
    x15,
    ~x15,
    x17,
    ~x17,
    x18,
    ~x18,
    x19,
    ~x19,
}
