demystify-lib/src/problem/snapshots/demystify_lib__problem__solver__tests__parse_essence.snap
---
source: demystify-lib/src/problem/solver.rs
expression: varlits
---
{
    x0,
    ~x2,
    x3,
    ~x4,
    ~x5,
    x7,
    x8,
    ~x9,
    ~x10,
    ~x12,
    x13,
    x14,
    ~x15,
    ~x17,
    ~x18,
    ~x19,
}
