demystify-lib/src/problem/snapshots/demystify_lib__problem__solver__tests__random_solution_little-2.snap
---
source: demystify-lib/src/problem/solver.rs
expression: puzsol
---
{
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    1,
                ],
            },
            val: 1,
        },
        equal: true,
    },
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    1,
                ],
            },
            val: 2,
        },
        equal: false,
    },
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    1,
                ],
            },
            val: 3,
        },
        equal: false,
    },
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    1,
                ],
            },
            val: 4,
        },
        equal: false,
    },
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    2,
                ],
            },
            val: 1,
        },
        equal: false,
    },
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    2,
                ],
            },
            val: 2,
        },
        equal: true,
    },
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    2,
                ],
            },
            val: 3,
        },
        equal: false,
    },
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    2,
                ],
            },
            val: 4,
        },
        equal: false,
    },
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    3,
                ],
            },
            val: 1,
        },
        equal: false,
    },
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    3,
                ],
            },
            val: 2,
        },
        equal: false,
    },
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    3,
                ],
            },
            val: 3,
        },
        equal: true,
    },
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    3,
                ],
            },
            val: 4,
        },
        equal: false,
    },
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    4,
                ],
            },
            val: 1,
        },
        equal: false,
    },
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    4,
                ],
            },
            val: 2,
        },
        equal: false,
    },
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    4,
                ],
            },
            val: 3,
        },
        equal: false,
    },
    PuzLit {
        varval: VarValPair {
            var: PuzVar {
                name: "grid",
                indices: [
                    4,
                ],
            },
            val: 4,
        },
        equal: true,
    },
}
